# OXP-gyro-key-mapper

./: CMakeLists.txt  README.md  main.cpp  uinput.cpp  uinput.hpp
imu/: CMakeLists.txt  imu.cpp  imu.h
imu/bmi160/: bmi160.c  bmi160.h  bmi160_defs.h
